# newsfeed

./: .gitignore  README.md  dashboard.html  deploy_all.sh  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: build-deploy.yml  deploy.yml
src/dashboard/: dashboard.html
src/lambdas/fetcher/: fetcher_lambda.py  requirements.txt
src/lambdas/filter/: filter_lambda.py
src/lambdas/ingest/: ingest_lambda.py
src/lambdas/ingest_api/: ingest_api_lambda.py
src/lambdas/retrieve/: retrieve_lambda.py
src/lambdas/shared/: filtered_news_item.py  news_item.py
src/newsfeed/dashboard/: dashboard.html
src/newsfeed/shared/: dynamodb_client.py  news_item.py
src/shared/: news_item.py
src/test/: test_1.py
terraform/: backend.tf  lambda.tf  main.tf  s3-artefacts.tf  s3-backend.tf  s3.tf  terraform.tf  variables.tf
terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/eventbridge/: main.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/sqs/: main.tf  variables.tf
tests/e2e/: only_debug_test_filter.py
tests/integration/filter/: test_filter.py
tests/integration/ingest/: test_ingest.py
tests/integration/ingest_api/: test_ingest_api.py
tests/integration/retrieve/: test_retieve.py
tests/unit/filter/: test_lambda_handler.py
tests/unit/filtering_algorithms/: test_keyword_score.py
tests/unit/ingest/: test_ingest.py
tests/unit/ingest_api/: test_ingest_api.py
tests/unit/retieve/: test_retieve.py
(+19 files in other folders)
