[tool.poetry]
name = "newsfeed"
version = "0.1.0"
description = "AWS Lambda newsfeed project"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"