[tool.poetry]
name = "newsfeed"
version = "0.1.0"
description = "AWS Lambda newsfeed project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "lambdas", from = "src" },
    { include = "shared", from = "src" },
    { include = "dashboard", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.8.1"
feedparser = "^6.0.11"
boto3 = "1.33.11"
pydantic = "^2.11.7"
httpx = "^0.28.0"
tqdm = "^4.67.0"
openai = "1.93.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^24.0.0"
mypy = "^1.0.0"
moto = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
testpaths = [
    "tests/unit",
    "tests/integration",
]
